# linphone-windows10

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CHANGELOG.txt  Linphone.sln  README.md  README.txt  RELEASE_NOTES.txt  clean.sh  nuget.config  prepare.py
.tx/: config
Agents/: AgentHost.cs  Agents.csproj  BackgroundManager.cs  Customs.cs  InitManager.cs  LinphoneCallInProgressAgent.cs  LinphoneForegroundLifeTimeAgent.cs  LinphoneScheduledAgent.cs  Logger.cs  PushManager.cs  RegistrationHelper.cs  TileManager.cs  version.bat
BackEnd/: ApiLock.cpp  ApiLock.h  BackEnd.vcxproj  CallController.cpp  CallController.h  CallControllerListener.h  CallDirection.cpp  CallDirection.h  Globals.cpp  Globals.h  LinphoneAddress.cpp  LinphoneAddress.h  LinphoneAuthInfo.cpp  LinphoneAuthInfo.h  LinphoneCall.cpp  LinphoneCall.h  LinphoneCallLog.cpp  LinphoneCallLog.h  LinphoneCallParams.cpp  LinphoneCallParams.h  LinphoneCallStats.cpp  LinphoneCallStats.h  LinphoneCore.cpp  LinphoneCore.h  LinphoneCoreFactory.cpp  LinphoneCoreFactory.h  LinphoneCoreListener.h  LinphoneProxyConfig.cpp  LinphoneProxyConfig.h  LpConfig.cpp  LpConfig.h  OnlineStatus.cpp  OnlineStatus.h  PayloadType.cpp  PayloadType.h  Server.h
BackEndProxyStub/: BackEndProxyStub.vcxproj  Linphone.BackEnd.OutOfProcess.h  Linphone.BackEnd.OutOfProcess.winmd  Linphone.BackEnd.OutOfProcess_i.c  Linphone.BackEnd.OutOfProcess_p.c  Linphone.BackEnd.h  Linphone.BackEnd.winmd  Linphone.BackEnd_i.c  Linphone.BackEnd_p.c  dlldata.c
Core/: ApiLock.cpp  ApiLock.h  BackgroundModeLogger.cpp  BackgroundModeLogger.h  CallController.cpp  CallController.h  CallControllerListener.h  CallDirection.h  Core.vcxproj  Enums.h  Globals.cpp  Globals.h  LinphoneAddress.cpp  LinphoneAddress.h  LinphoneAuthInfo.cpp  LinphoneAuthInfo.h  LinphoneCall.cpp  LinphoneCall.h  LinphoneCallLog.cpp  LinphoneCallLog.h  LinphoneCallParams.cpp  LinphoneCallParams.h  LinphoneCallStats.cpp  LinphoneCallStats.h  LinphoneChatMessage.cpp  LinphoneChatMessage.h  LinphoneChatMessageListener.h  LinphoneChatRoom.cpp  LinphoneChatRoom.h  LinphoneCore.cpp  LinphoneCore.h  LinphoneCoreFactory.cpp  LinphoneCoreFactory.h  LinphoneCoreListener.h  LinphoneProxyConfig.cpp  LinphoneProxyConfig.h  LpConfig.cpp  LpConfig.h  OnlineStatus.h  PayloadType.cpp  (+12 more)
CoreProxyStub/: CoreProxyStub.vcxproj  dlldata.c
CsWrapper/: CsWrapper.csproj  CsWrapper.sln  LinphoneWrapper.cs
Linphone/: App.config  App.xaml  App.xaml.cs  AssistantPage.xaml  AssistantPage.xaml.cs  BaseModel.cs  BasePage.cs  Linphone.csproj  Linphone_StoreKey.pfx  Linphone_TemporaryKey.pfx  LocalizedStrings.cs  MainPage.xaml  MainPage.xaml.cs  Package.StoreAssociation.xml  Package.appxmanifest  Package_x86.appxmanifest  WindowsPhoneReservedAppInfo.xml  (+2 more)
Linphone.bak/: App.xaml  LocalizedStrings.cs
Native/: Address.cpp  Address.h  ApiLock.cpp  ApiLock.h  AuthInfo.cpp  AuthInfo.h  CMakeLists.txt  Call.cpp  Call.h  CallController.cpp  CallController.h  CallLog.cpp  CallLog.h  CallParams.cpp  CallParams.h  CallStats.cpp  CallStats.h  ChatMessage.cpp  ChatMessage.h  ChatMessageListener.h  ChatRoom.cpp  ChatRoom.h  Config.cpp  Config.h  Core.cpp  Core.h  Core.vcxproj.bak  CoreListener.h  Enums.h  Factory.cpp  Factory.h  LpConfig.cpp  LpConfig.h  Native.vcxproj  PayloadType.cpp  PayloadType.h  ProxyConfig.cpp  ProxyConfig.h  Transports.cpp  Transports.h  (+10 more)
(+313 files in other folders)
